# blizzardapi2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-it.cjs  .release-it.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  conf.py  index.rst  package-lock.json  package.json  pyproject.toml  requirements.txt  requirementx.txt  wow_game_data_api.patch  wow_game_data_api.patch_new  wow_profile_api.patch  wow_profile_api.patch_new
.github/: dependabot.yml
.github/workflows/: README.md  black-check.yml  black.yml  docs.yml  lint.yml  python-package.yml  release.yml  security.yml  test.yml
blizzardapi2/: __init__.py  api.py  blizzard_api.py  endpoint.py  types.py
blizzardapi2/battlenet/: battlenet_api.py  battlenet_oauth_api.py
blizzardapi2/diablo3/: diablo3_api.py  diablo3_community_api.py  diablo3_game_data_api.py
blizzardapi2/hearthstone/: hearthstone_api.py  hearthstone_game_data_api.py
blizzardapi2/starcraft2/: starcraft2_api.py  starcraft2_community_api.py  starcraft2_game_data_api.py
blizzardapi2/wow/: wow_api.py  wow_game_data_api.py  wow_profile_api.py
docs/: index.rst  pull_request_template.md
docs/battlenet/: README.md
docs/diablo3/: README.md
docs/hearthstone/: README.md
docs/source/: conf.py
docs/starcraft2/: README.md
docs/wow/: README.md
tests/: conftest.py  fixtures.py  test_base_api.py  test_battlenet.py  test_battlenet_oauth_api.py  test_diablo3.py  test_diablo3_community_api.py  test_diablo3_game_data_api.py  test_hearthstone.py  test_hearthstone_game_data_api.py  test_starcraft2.py  test_starcraft2_community_api.py  test_starcraft2_game_data_api.py  test_types.py  test_wow.py  test_wow_classic_game_data_api.py  test_wow_game_data_api.py  test_wow_profile_api.py
