[tool.poetry]
name = "blizzardapi2"
version = "0.1.1"
description = "A Python wrapper for Blizzard API"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
